fix: explicitly check that pollIntervall is null

--- a/src/grizzly/common/harness.html
+++ b/src/grizzly/common/harness.html
@@ -45,7 +45,7 @@
           self.postMessage({type: 'poll'});
         }, 50);
       } else if (e.data.command === 'stop') {
-        if (pollInterval) {
+        if (pollInterval !== null) {
           clearInterval(pollInterval);
           pollInterval = null;
         }
